added actions registry